src/public/styles/style.scss
@import ".reset";
@import ".bootstrap-custom";
$primary-color: #00cf92;
$primary-hover-color: #00d898;
$secondary-color: #fff;
$text-color: #696969;
$input-color: #e3e3e3;
$input-focus-color: #e9e9e9;
$footer-color: #222;
$nav-transition-duration: 0.25s;

html,
body {
  color: $text-color;
  font-family: 'Roboto', sans-serif;
  line-height: 1.5;
}

nav {
  height: 40px;
  position: fixed;
  width: 100%;
  z-index: 100;
}

.nav-wrapper {
  background: $secondary-color;
  width: 100%;
  height: 100%;
  transition: background $nav-transition-duration;
  
  &.scrolled {
    background: $primary-color;
    
    ul {
      a {
        &:hover {
          background: $primary-hover-color;
        }
      }
    }
    
    a {
      color: $secondary-color;
    }
  }
  
  &:not(.scrolled) {
    a {
      &:hover {
        color: $text-color;
      }
    }
  }
  
  ul {
    float: right;
    
    a {
      font-size: 0.875em;
      padding-left: 20px;
      padding-right: 20px;
    }
  }
  
  li {
    float: left;
    height: 100%;
  }
  
  a {
    color: $primary-color;
    display: block;
    height: 100%;
    line-height: 40px;
    text-decoration: none;
    text-transform: uppercase;
    transition: color $nav-transition-duration;
    
    &.name {
      float: left;
      font-size: 1.375em;
      font-weight: 300;
    }
  }
}

@media (max-width: $screen-xs-max) {
  .nav-wrapper {
    .container {
      width: 100%;
    }
    
    ul {
      display: none;
    }
    
    &.open {
      &.scrolled {
        ul {
          background: $primary-color;
        }
      }
      
      ul {
        background: $secondary-color;
        display: block;
        position: absolute;
        top: 40px;
        left: 0;
        width: 100%;
        margin-left: 0;
        transition: background $nav-transition-duration;
        
        a {
          padding-left: 15px;
          padding-right: 15px;
        }
      }
      
      li {
        float: none;
      }
    }
  }
}

.nav-toggle {
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  padding-left: 15px;
  padding-right: 15px;
  
  i {
    line-height: 40px;
  }
}

header {
  background: $primary-color;
  color: $secondary-color;
  padding-top: 120px;
  padding-bottom: 100px;
  
  .profile-image {
    border-radius: 50%;
  }
  
  h1 {
    font-size: 5em;
    font-weight: 100;
    left: -.08em;
    line-height: 1;
    margin-bottom: 5px;
    position: relative;
    text-transform: uppercase;
  }
  
  h2 {
    font-size: 1.875em;
    font-weight: 100;
    margin-bottom: 10px;
    text-transform: uppercase;
  }
  
  p {
    font-size: 1.5em;
  }
}

@media (max-width: $screen-xs-max) {
  header {
    h1 {
      font-size: 3.5em;
    }
  }
}

section {
  padding-top: 50px;
  
  &:not(#contact) {
    li {
      font-size: 1.125em;
    }
    
    a {
      color: $primary-color;
    }
  }
  
  h1 {
    color: $primary-color;
    font-size: 3em;
    font-weight: 100;
    text-transform: uppercase;
    margin-bottom: 50px;
  }
  
  h2 {
    font-size: 1.5em;
    font-weight: 500;
    margin-bottom: 10px;
  }
  
  h3,
  p {
    font-size: 1.125em;
    margin-bottom: 10px;
  }
  
  h3 {
    font-weight: 500;
  }
  
  a {
    text-decoration: none;
    
    &:hover {
      text-decoration: underline;
    }
  }
}

#experience {
  .date {
    color: $primary-color;
    font-size: 1.125em;
    text-align: right;
  }
  
  .timeline {
    border-left: 2px solid $primary-color;
    height: 100%;
    position: absolute;
    left: -10%;
    
    &::before {
      display: block;
      width: 30px;
      height: 30px;
      content: " ";
      border-radius: 15px;
      border: 2px solid $primary-color;
      position: absolute;
      left: -16px;
      top: -5px;
      background: $secondary-color;
    }
  }
  
  ul {
    list-style-type: circle;
    list-style-position: inside;
    margin-bottom: 100px;
    padding-left: 1em;
    text-indent: -1em;
  }
}

#skills {
  .level-1,
  .level-2,
  .level-3,
  .level-4,
  .level-5 {
    display: block;
    height: 4px;
    background: $primary-color;
    margin-bottom: 15px;
  }
  
  .level-1 {
    width: 15%;
  }
  
  .level-2 {
    width: 30%;
  }
  
  .level-3 {
    width: 45%;
  }
  
  .level-4 {
    width: 60%;
  }
  
  .level-5 {
    width: 75%;
  }
}

#contact {
  ul {
    margin-bottom: 30px;
    
    li {
      margin-bottom: 10px;
    }
    
    i {
      vertical-align: middle;
      margin-right: 5px;
    }
    
    span,
    a {
      vertical-align: middle;
    }
    
    a {
      color: inherit;
    }
  }
  
  h3 {
    margin-bottom: 30px;
  }
  
  input[type="text"],
  input[type="email"],
  textarea,
  button {
    border: 0;
    border-radius: 2px;
    display: block;
    font-size: 1.125em;
    font-family: inherit;
    outline: 0;
    padding: 15px 12px;
    width: 100%;
  }
  
  input[type="text"],
  input[type="email"],
  textarea {
    background: $input-color;
    color: inherit;
    margin-bottom: 10px;
    
    &:focus {
      background: $input-focus-color;
    }
  }
  
  textarea {
    height: 180px;
    max-width: 100%;
  }
  
  button {
    background: $primary-color;
    color: $secondary-color;
    cursor: pointer;
    font-weight: 500;
    position: relative;
    text-transform: uppercase;
    
    &:hover {
      background: $primary-hover-color;
    }
    
    &:not(.submitting) {
      .loader {
        display: none;
      }
    }
    
    &.submitting {
      .label {
        visibility: hidden;
      }
      
      .loader {
        display: block;
        position: absolute;
        top: -12%;
        left: 50%;
      }
    }
  }
  
  form {
    margin-bottom: 100px;
  }
  
  .success,
  .error {
    i {
      vertical-align: middle;
      margin-right: 10px;
      position: relative;
      top: -1px;
    }
  }
  
  .success {
    position: absolute;
    width: 100%;
    height: 100%;
    display: block;
    background: #fff;
    opacity: 1;
    transition: opacity 1s;
    z-index: 50;
    
    &.invisible {
      opacity: 0;
    }
  }
  
  .error {
    margin-top: 20px;
  }
}

footer {
  background: $footer-color;
  color: $secondary-color;
  padding-top: 20px;
  padding-bottom: 20px;
  
  .copyright {
    float: left;
  }
  
  a.source {
    color: $secondary-color;
    float: right;
    text-decoration: none;
    
    &:hover {
      text-decoration: underline;
    }
  }
}

img.scale-image {
  width: 100%;
}

@media (max-width: $screen-xs-max) {
  img.scale-image {
    width: 40%;
    margin-left: 30%;
    margin-top: 50px;
  }
}

